Bug 65215 - A crash with the new Accept/reject edit comment dialog
Summary: A crash with the new Accept/reject edit comment dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.1.0.0.beta2 target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-31 15:30 UTC by Markus Mohrhard
Modified: 2013-05-31 16:19 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Markus Mohrhard 2013-05-31 15:30:39 UTC
Executing the dialog with the document from Bug 64646 that contains a xls file with change tracking. Go to Edit->Changes->Accept/Reject and right click on one and select Comment.

	

    warn:vcl.layout:19827:1:include/vcl/builder.hxx:248: .ui widget "edit" needs to correspond to vcl type 13MultiLineEdit
    soffice.bin: /home/moggi/devel/libo4/include/vcl/builder.hxx:249: T* VclBuilder::get(T*&, rtl::OString) [with T = MultiLineEdit]: Assertion `w && dynamic_cast<T*>(w)' failed.
Comment 1 Caolán McNamara 2013-05-31 15:43:46 UTC
can reproduce it now
Comment 2 Commit Notification 2013-05-31 16:00:53 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=36b5efd733c68c67bb4a1b9489a775aed1fe98e7&h=libreoffice-4-1

Resolves: fdo#65215 wrong type for the multiline comment edit widget


It will be available in LibreOffice 4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2013-05-31 16:01:12 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ac296af1d3d659097153884e3b78a57b334c4a2

Resolves: fdo#65215 wrong type for the multiline comment edit widget



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.