Resolves: fdo#65215 wrong type for the multiline comment edit widget

Change-Id: I14b13285daf27191bb8cf95bc7e801281f97dde8
(cherry picked from commit 9ac296af1d3d659097153884e3b78a57b334c4a2)